# kglobalaccel

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5GlobalAccelConfig.cmake.in  KF6GlobalAccelConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kglobalshortcuttest.cpp  kglobalshortcuttest.h
po/af/: kglobalaccel5_qt.po
po/ar/: kglobalaccel5.po  kglobalaccel5_qt.po
po/as/: kglobalaccel5_qt.po
po/ast/: kglobalaccel5.po  kglobalaccel5_qt.po
po/az/: kglobalaccel5_qt.po
po/be/: kglobalaccel5_qt.po
po/be@latin/: kglobalaccel5_qt.po
po/bg/: kglobalaccel5.po  kglobalaccel5_qt.po
po/bn/: kglobalaccel5_qt.po
po/bn_IN/: kglobalaccel5_qt.po
po/br/: kglobalaccel5_qt.po
po/bs/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ca/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ca@valencia/: kglobalaccel5.po  kglobalaccel5_qt.po
po/crh/: kglobalaccel5_qt.po
po/cs/: kglobalaccel5.po  kglobalaccel5_qt.po
po/csb/: kglobalaccel5.po  kglobalaccel5_qt.po
po/cy/: kglobalaccel5_qt.po
po/da/: kglobalaccel5.po  kglobalaccel5_qt.po
po/de/: kglobalaccel5.po  kglobalaccel5_qt.po
po/el/: kglobalaccel5.po  kglobalaccel5_qt.po
po/en_GB/: kglobalaccel5.po  kglobalaccel5_qt.po
po/eo/: kglobalaccel5.po  kglobalaccel5_qt.po
po/es/: kglobalaccel5.po  kglobalaccel5_qt.po
po/et/: kglobalaccel5.po  kglobalaccel5_qt.po
po/eu/: kglobalaccel5.po  kglobalaccel5_qt.po
po/fa/: kglobalaccel5.po  kglobalaccel5_qt.po
po/fi/: kglobalaccel5.po  kglobalaccel5_qt.po
po/fr/: kglobalaccel5.po  kglobalaccel5_qt.po
po/fy/: kglobalaccel5_qt.po
po/ga/: kglobalaccel5.po  kglobalaccel5_qt.po
po/gd/: kglobalaccel5_qt.po
po/gl/: kglobalaccel5.po  kglobalaccel5_qt.po
po/gu/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ha/: kglobalaccel5_qt.po
po/he/: kglobalaccel5.po  kglobalaccel5_qt.po
po/hi/: kglobalaccel5.po  kglobalaccel5_qt.po
po/hne/: kglobalaccel5_qt.po
po/hr/: kglobalaccel5.po  kglobalaccel5_qt.po
po/hsb/: kglobalaccel5_qt.po
po/hu/: kglobalaccel5.po  kglobalaccel5_qt.po
po/hy/: kglobalaccel5_qt.po
po/ia/: kglobalaccel5.po  kglobalaccel5_qt.po
po/id/: kglobalaccel5.po  kglobalaccel5_qt.po
po/is/: kglobalaccel5.po  kglobalaccel5_qt.po
po/it/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ja/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ka/: kglobalaccel5_qt.po
po/kk/: kglobalaccel5.po  kglobalaccel5_qt.po
po/km/: kglobalaccel5.po  kglobalaccel5_qt.po
po/kn/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ko/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ku/: kglobalaccel5_qt.po
po/lb/: kglobalaccel5_qt.po
po/lt/: kglobalaccel5.po  kglobalaccel5_qt.po
po/lv/: kglobalaccel5.po  kglobalaccel5_qt.po
po/mai/: kglobalaccel5.po  kglobalaccel5_qt.po
po/mk/: kglobalaccel5_qt.po
po/ml/: kglobalaccel5.po  kglobalaccel5_qt.po
po/mr/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ms/: kglobalaccel5.po  kglobalaccel5_qt.po
po/nb/: kglobalaccel5.po  kglobalaccel5_qt.po
po/nds/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ne/: kglobalaccel5_qt.po
po/nl/: kglobalaccel5.po  kglobalaccel5_qt.po
po/nn/: kglobalaccel5.po  kglobalaccel5_qt.po
po/oc/: kglobalaccel5_qt.po
po/or/: kglobalaccel5_qt.po
po/pa/: kglobalaccel5.po  kglobalaccel5_qt.po
po/pl/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ps/: kglobalaccel5_qt.po
po/pt/: kglobalaccel5.po  kglobalaccel5_qt.po
po/pt_BR/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ro/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ru/: kglobalaccel5.po  kglobalaccel5_qt.po
po/se/: kglobalaccel5_qt.po
po/si/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sk/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sl/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sq/: kglobalaccel5_qt.po
po/sr/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sr@ijekavian/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sr@ijekavianlatin/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sr@latin/: kglobalaccel5.po  kglobalaccel5_qt.po
po/sv/: kglobalaccel5.po  kglobalaccel5_qt.po
po/ta/: kglobalaccel5_qt.po
po/te/: kglobalaccel5_qt.po
po/tg/: kglobalaccel5.po  kglobalaccel5_qt.po
po/th/: kglobalaccel5.po  kglobalaccel5_qt.po
po/tr/: kglobalaccel5.po  kglobalaccel5_qt.po
po/tt/: kglobalaccel5_qt.po
po/ug/: kglobalaccel5.po  kglobalaccel5_qt.po
po/uk/: kglobalaccel5.po  kglobalaccel5_qt.po
po/uz/: kglobalaccel5_qt.po
po/uz@cyrillic/: kglobalaccel5_qt.po
po/vi/: kglobalaccel5.po  kglobalaccel5_qt.po
po/wa/: kglobalaccel5.po  kglobalaccel5_qt.po
po/x-test/: kglobalaccel5_qt.po
po/xh/: kglobalaccel5_qt.po
po/zh_CN/: kglobalaccel5.po  kglobalaccel5_qt.po
po/zh_HK/: kglobalaccel5_qt.po
src/: CMakeLists.txt  Messages.sh  config-kglobalaccel.h.cmake  kglobalaccel-index.qdoc  kglobalaccel.cpp  kglobalaccel.h  kglobalaccel.qdoc  kglobalaccel.qdocconf  kglobalaccel_p.h  kglobalshortcutinfo.cpp  kglobalshortcutinfo.h  kglobalshortcutinfo_dbus.cpp  kglobalshortcutinfo_p.h  kglobalshortcuttrigger.cpp  kglobalshortcuttrigger.h  kglobalshortcuttrigger_p.h  org.kde.KGlobalAccel.xml  org.kde.kglobalaccel.Component.xml  sequencehelpers_p.cpp  sequencehelpers_p.h
src/runtime/: CMakeLists.txt  component.cpp  component.h  globalshortcut.cpp  globalshortcut.h  globalshortcutcontext.cpp  globalshortcutcontext.h  globalshortcutsregistry.cpp  globalshortcutsregistry.h  kglobalaccel.desktop  kglobalaccel_interface.cpp  kglobalaccel_interface.h  kglobalaccel_mac.cpp  kglobalaccel_win.cpp  kglobalaccel_x11.cpp  kglobalaccel_x11.h  kglobalacceld.cpp  kglobalacceld.h  kglobalshortcutinfo_p.h  kserviceactioncomponent.cpp  kserviceactioncomponent.h  logging.cpp  logging_p.h  main.cpp  plasma-kglobalaccel.service.in
src/runtime/plugins/: CMakeLists.txt
src/runtime/plugins/osx/: kglobalaccel_mac.cpp  kglobalaccel_mac.h
src/runtime/plugins/windows/: kglobalaccel_win.cpp  kglobalaccel_win.h
src/runtime/plugins/xcb/: CMakeLists.txt  kglobalaccel_x11.cpp  kglobalaccel_x11.h
tests/: CMakeLists.txt  kglobalacceltest.cpp  kglobalacceltest.qml  kglobalshortcuttriggerparsingtest.cpp
(+249 files in other folders)
